--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,5 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Välkommen till denna sida!</h1>
-<p>Det här är en sida för dig som gillar padel. Du hittar information om hur sporten fungerar och så kan du även ta del av padelbloggen där spelare delar med sig av sina tips och tricks för att vinna matcher och utveckla ditt padel-spel.</p>
+<div class="intro-div">
+    <h1>Välkommen till denna sida!</h1>
+    <p class="index-intro">Det här är en sida för dig som gillar padel. Du hittar information om hur sporten fungerar och så kan du även ta del av padelbloggen där spelare delar med sig av sina tips och tricks för att vinna matcher och utveckla ditt padel-spel.</p>
+    <img class="image-ball" src="~/Images/ball.png" alt="Bild på en tennisboll" />
+</div>
