--- a/Views/Home/Rules.cshtml
+++ b/Views/Home/Rules.cshtml
@@ -4,6 +4,7 @@
 
 <section>
     <h1>Regler</h1>
+    <p>@ViewBag.Text</p>
     <article class="rules-article">
         <h2>Allmänna regler</h2>
         <ul class="rules-ul">
