--- a/Views/Home/Blog.cshtml
+++ b/Views/Home/Blog.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<DT102G_moment2.Models.BlogPostModel>;
 
 @{
-    ViewData["Title"] = "Blogg Posts";
+    ViewData["Title"] = "Blog";
 }
 
 <!--Get sub menu-->
