--- a/Views/Home/WriteBlogPost.cshtml
+++ b/Views/Home/WriteBlogPost.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DT102G_moment2.Models.BlogPostModel;
 
 @{
-    ViewData["Title"] = "Write Blog Post";
+    ViewData["Title"] = "Blog";
 }
 
 <!--Get sun menu-->
