--- a/Views/Shared/_SubMenu.cshtml
+++ b/Views/Shared/_SubMenu.cshtml
@@ -1,10 +1,10 @@
 ﻿<nav class="undernav">
     <ul class="undernav-nav">
         <li class="undernav-item">
-            <a class="undernav-link" asp-area="" asp-controller="Home" asp-action="Blog">See tips</a>
+            <a id="seeTips" class="undernav-link" asp-area="" asp-controller="Home" asp-action="Blog">See tips</a>
         </li>
         <li class="undernav-item">
-            <a class="undernav-link" asp-area="" asp-controller="Home" asp-action="WriteBlogPost">Write tips</a>
+            <a id="writeTips" class="undernav-link" asp-area="" asp-controller="Home" asp-action="WriteBlogPost">Write tips</a>
         </li>
     </ul>
 </nav>
