--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -117,14 +117,6 @@ li {
     font-size: 1em;
 }
 
-.courses {
-    list-style: disc;
-    padding: 0.5em 0 0.5em 2em;
-}
-
-.active {
-    background-color: #145242 !important;
-}
 
 b {
     font-weight: bold;
@@ -159,6 +151,11 @@ b {
     max-width: 809px;
     margin: 1em auto;
     box-sizing: border-box;
+}
+
+.active {
+    font-weight: bold;
+    color: #FAA165!important;
 }
 
 
